test/library/standard/Heap/type/testBorrowed.good
./HeapTest.chpl:36: In function 'testHeap':
./HeapTest.chpl:39: error: creating a 'new borrowed' type is a not allowed
  testBorrowed.chpl:5: called as testHeap(type t = borrowed T)
