test/library/standard/Heap/type/testBorrowed.chpl
import HeapTest;

type t = borrowed HeapTest.T;

HeapTest.testHeap(t);
